# macro-rag-research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  render.yaml
backend/: alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_observability_tables.py
backend/app/: config.py  db.py  main.py
backend/app/chat/: pricing.py  slim.py  system_prompt.py  tools.py  tracing.py
backend/app/middleware/: auth.py  body_limit.py  rate_limit.py
backend/app/models/: __init__.py  disagreements.py  email_chunks.py  emails.py  key_points.py  reference.py  summaries.py  traces.py  trade_ideas.py  webinars.py
backend/app/retrieval/: hybrid.py
backend/app/routers/: admin.py  chat.py  disagreements.py  emails.py  key_points.py  meta.py  summaries.py  trade_ideas.py
backend/app/utils/: redact.py
backend/scripts/: build_scrub_literals.py  embed.py  migrate.py  patch_bullets.py  scrub_pii.py
backend/tests/: conftest.py  test_body_limit.py  test_redact.py
deploy/k8s/: 00-namespace.yaml  01-configmap.yaml  03-deployment.yaml  04-service.yaml  05-ingress.yaml  06-cluster-issuer.yaml
frontend/: admin.html  index.html
frontend/js/: admin.js  api.js  app.js  chat.js
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
